--- a/_sass/_code.scss
+++ b/_sass/_code.scss
@@ -12,6 +12,15 @@ code {
   font-size: 85%;
 }
 
+p .highlighter-rouge {
+  padding: 2px 4px;
+  font-size: 90%;
+  color: #c7254e;
+  background-color: #f9f2f4;
+  white-space: nowrap;
+  border-radius: 4px;
+}
+
 pre {
   display: block;
   margin-top: 0;
