--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,4 +1,9 @@
 <div class="title_container">
+  <div class="sitesearch">
+    <form>
+      <input type="search" placeholder="Search">
+    </form>
+  </div>
   <div class="maintitle"></div>
   <div class="profile">
     <a class="image" href="{{ site.baseurl }}/"></a>
