--- a/_sass/_mainpage.scss
+++ b/_sass/_mainpage.scss
@@ -5,7 +5,7 @@ $pc-view: 500px;
 }
 
 .maintitle {
-  background-image: url("/assets/main/background.jpg");
+  background-image: url("/static/img/background.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   background-position: bottom;
@@ -25,7 +25,7 @@ $pc-view: 500px;
   justify-content: center;
   align-items: center;
   .image {
-    background-image: url("/assets/main/me.png");
+    background-image: url("/static/img/me.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -60,13 +60,13 @@ $pc-view: 500px;
   }
 }
 .github {
-  background-image: url("/assets/main/github.png");
+  background-image: url("/static/img/github.png");
 }
 .insta {
-  background-image: url("/assets/main/insta.svg");
+  background-image: url("/static/img/insta.svg");
 }
 .gmail {
-  background-image: url("/assets/main/gmail.png")
+  background-image: url("/static/img/gmail.png")
 }
 
 .writer_info {
@@ -77,7 +77,7 @@ $pc-view: 500px;
   display: flex;
   .image {
     flex-shrink: 0;
-    background-image: url("/assets/main/me.png");
+    background-image: url("/static/img/me.png");
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -139,5 +139,63 @@ $pc-view: 500px;
     .bio {
       font-size: 14px;
     }
+  }
+}
+
+.sitesearch {
+  position: absolute;
+  top: 1rem;
+  left: 0.5rem;
+  input {
+    outline: none;
+  }
+  input[type=search] {
+    -webkit-appearance: textfield;
+    box-sizing: content-box; // -webkit-box-siing
+    font-family: inherit;
+    font-size: 80%;
+  }
+  input::-webkit-search-decoration,
+  input::-webkit-search-cancel-button {
+    display: none; 
+  }
+  
+  
+  input[type=search] {
+    background: rgba(1, 1, 1, 0.452) url("/static/img/search-3-16.png") no-repeat 9px center;
+    border: none 1px rgb(248, 248, 248);
+    padding: 9px 10px 9px 35px;
+    width: 55px;
+    
+    -webkit-border-radius: 10em;
+    -moz-border-radius: 10em;
+    border-radius: 10em;
+    
+    -webkit-transition: all .5s;
+    -moz-transition: all .5s;
+    transition: all .5s;
+  }
+  input[type=search]:focus {
+    background-image: url("/static/img/search-13-16.png");
+    background-size: 16px;
+    background-repeat: no-repeat;
+    // background-position: center;
+    width: 130px;
+    color: #1A1A1A;
+    background-color: #fff;
+    border-color: #66CC75;
+    
+    -webkit-box-shadow: 0 0 5px rgba(109,207,246,.5);
+    -moz-box-shadow: 0 0 5px rgba(109,207,246,.5);
+    box-shadow: 0 0 5px rgba(109,207,246,.5);
+  }
+  
+  
+  input:-moz-placeholder {
+    // color: #999;
+    color: rgb(209, 209, 209);
+  }
+  input::-webkit-input-placeholder {
+    color: rgb(209, 209, 209);
   }
 }
