--- a/_includes/title.html
+++ b/_includes/title.html
@@ -1,8 +1,9 @@
 <div class="title_container">
   <div class="sitesearch">
     <form>
-      <input type="search" placeholder="Search">
+      <input id="searchbox" type="search" placeholder="Search">
     </form>
+    <ul id="searchresult"></ul>
   </div>
   <div class="maintitle"></div>
   <div class="profile">
