--- a/_layouts/detail.html
+++ b/_layouts/detail.html
@@ -5,7 +5,7 @@
 
   <body>
     <div class="container">
-      <a class="backbutton" href="{{ site.baseurl }}/">&lt;</a>
+      <a class="backbutton" href="{{ site.baseurl }}/">&lang;</a>
       {{ content }}
 
       <div class="writer_info">
