--- a/_sass/_posts.scss
+++ b/_sass/_posts.scss
@@ -65,3 +65,14 @@
     }
   }
 }
+
+.backbutton {
+  color: #1A1A1A;
+  font-size: 32px;
+  font-weight: bold;
+  text-decoration: none;
+}
+.backbutton:hover {
+  color: #268BD2;
+  text-decoration: none;
+}
