--- a/_includes/title.html
+++ b/_includes/title.html
@@ -9,7 +9,7 @@
   <div class="profile">
     <a class="image" href="{{ site.baseurl }}/"></a>
     <div class="info">
-      <h6 class="name">{{ site.profile_name }}</h6>
+      <h6 class="name"><a href="{{ site.baseurl}}/about">{{ site.profile_name }}</a></h6>
       <p class="bio">{{ site.profile_bio }}</p>
     </div>
     <div class="social">
