--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,13 +8,21 @@ layout: detail
   {{ content }}
 </article>
 
-{% if site.related_posts != empty %}
 <aside class="related">
-  <h3>Related posts</h3>
-  <ul id="related-posts">
-  {% comment %} jquery로 유사도 비교하여 넣기 {% endcomment %}
-  </ul>
-</aside>
-{% endif %}
+  {% if site.related_posts != empty %}
+    <h3>Related posts</h3>
+    <ul id="related-posts">
+    {% comment %} jquery로 유사도 비교하여 넣기 {% endcomment %}
+    </ul>
+  {% endif %}
 
+  <h3>Tags</h3>
+  <div class="tags">
+    {% for tag in page.categories %}
+      <div class="tag">
+      {{ tag }}
+      </div>
+    {% endfor %}
+  </div>
+</aside>
 <script src="{{ site.baseurl }}/static/js/relatedMatcher.js"></script>
